@@ -2,27 +2,28 @@
 #'
 #' @description
 #' Download the latest version of the GIMMS NDVI3g file inventory from the NASA
-#' Ames Ecological Forecasting Lab (ECOCAST) or NASA Earth Exchange (NEX) Amazon
-#' AWS. If none of the specified endpoints is reachable (e.g., if there is no
-#' active internet connection), the latest local version of the file inventory
-#' is used.
+#' Ames Ecological Forecasting Lab (ECOCAST), NASA Earth Exchange (NEX) Amazon
+#' AWS or A Big Earth Data Platform for Three Poles. If the specified endpoint 
+#' is not reachable (e.g., if there is no active internet connection), the 
+#' latest local version of the file inventory is used.
 #'
 #' @param server \code{character}. Specifies the remote server to use. Currently
-#' available options are \code{"ecocast"} (default) and \code{"nasanex"}.
+#' available options are \code{"ecocast"} (default), \code{"nasanex"} and 
+#' \code{"poles"}.
 #' @param version \code{integer} (or any other convertible class), defaults to
 #' \code{1L}. Specifies desired GIMMS NDVI3g product version, see 'Details'.
-#' Currently ignored if \code{server = "nasanex"}.
+#' Currently ignored if \code{server != "ecocast"}.
 #' @param quiet \code{logical}, defaults to \code{FALSE}. If \code{TRUE},
 #' console output is disabled.
 #'
 #' @return
-#' A \code{character} vector of online filepaths.
+#' A \code{character} vector of online file paths.
 #'
 #' @details
-#' GIMMS NDVI3g.v1 is currently available from ECOCAST until end 2015 and comes
-#' in NetCDF (\code{.nc4}) format. In contrast, NDVI3g.v0 is available as ENVI
-#' binary imagery and available from ECOCAST (NASANEX) until end 2013 (2012)
-#' only.
+#' GIMMS NDVI3g.v1 is currently available from ECOCAST and A Big Earth Data 
+#' Platform for Three Poles until end 2015 and comes in NetCDF (\code{.nc4}) 
+#' format. In contrast, NDVI3g.v0 is available as ENVI binary imagery and 
+#' available from ECOCAST (NASANEX) until end 2013 (2012) only.
 #'
 #' @seealso
 #' \code{\link{rearrangeFiles}}.
@@ -34,48 +35,75 @@
 #' }
 #'
 #' ## note that local versions of the online file inventories are also available
-#' ofl_v1 <- system.file("extdata", "inventory_ecv1.rds", package = "gimms")
-#' readRDS(ofl_v1)
+#' ofl_ecv1 <- system.file("extdata", "inventory_ecv1.rds", package = "gimms")
+#' readRDS(ofl_ecv1)
 #'
 #' ofl_v0 <- system.file("extdata", "inventory_ecv0.rds", package = "gimms")
 #' readRDS(ofl_v0)
 #'
+#' ofl_plv1 <- system.file("extdata", "inventory_plv1.rds", package = "gimms")
+#' readRDS(ofl_plv1)
+#' 
 #' @export updateInventory
 #' @name updateInventory
-updateInventory <- function(server = c("ecocast", "nasanex"), version = 1L,
-                            quiet = FALSE) {
-
+updateInventory <- function(
+  server = c("ecocast", "nasanex", "poles")
+  , version = 1L
+  , quiet = FALSE
+) {
+  
+  server = match.arg(server)
+  
   ## available files (online)
-  is_ecocast <- server[1] == "ecocast"
-  fls <- if (is_ecocast) updateEcocast(version) else updateNasanex()
-
-  ## if first-choice server is not available, try alternative server
-  if (inherits(fls, "try-error") & length(server) == 2) {
-    if (!quiet)
-      cat("Priority server ('", server[1],
-          "') is not available. Contacting alternative server ('", server[2],
-          "').\n", sep = "")
-    fls <- if (is_ecocast) updateNasanex() else updateEcocast(version)
-  }
-
+  fls = do.call(
+    switch(
+      server
+      , "ecocast" = updateEcocast
+      , "nasanex" = updateNasanex
+      , "poles"   = updatePoles
+    )
+    , args = list(
+      version = version
+    )
+  )
+  
   ## available files (offline)
   if (inherits(fls, "try-error")) {
-    if (!quiet)
+    if (!quiet) {
       cat("Failed to retrieve online information. Using local file inventory...\n")
-
-    fls <- if (server[1] == "nasanex") {
-      readRDS(system.file("extdata", "inventory_nnv0.rds", package = "gimms"))
-    } else {
-      readRDS(system.file("extdata", paste0("inventory_ec",
-                                            ifelse(version == 1, "v1", "v0"),
-                                            ".rds"), package = "gimms"))
     }
+    
+    extfile = paste0(
+      "inventory_"
+      , switch(
+        server
+        , "ecocast" = paste0(
+          "ec"
+          , ifelse(
+            version == 1
+            , "v1"
+            , "v0"
+          )
+        )
+        , "nasanex" = "nnv0"
+        , "poles" = "plv1" 
+      )
+      , ".rds"
+    )
+    
+    fls = readRDS(
+      system.file(
+        "extdata"
+        , extfile
+        , package = "gimms"
+      )
+    )
   }
-
+  
   ## remove duplicates and sort according to date
   fls <- fls[!duplicated(basename(fls))]
   fls <- rearrangeFiles(fls)
-
+  
   ## return files
   return(fls)
 }
@@ -84,9 +112,9 @@ updateInventory <- function(server = c("ecocast", "nasanex"), version = 1L,
 ### update from ecocast -----
 
 updateEcocast <- function(version = 1L) {
-
+  
   version <- as.integer(version)
-
+  
   ## handle expired certificate using 'curl'
   h = curl::new_handle(
     ssl_verifypeer = 0L
@@ -98,7 +126,7 @@ updateEcocast <- function(version = 1L) {
   on.exit(
     close(con)
   )
-
+  
   suppressWarnings(
     try(readLines(con), silent = TRUE)
   )
@@ -107,22 +135,54 @@ updateEcocast <- function(version = 1L) {
 
 ### update from nasanex -----
 
-updateNasanex <- function() {
-
+updateNasanex <- function(...) {
+  
   # list available folders
   con = serverPath("nasanex")
   cnt = try(readLines(con, warn = FALSE)[2], silent = TRUE)
-
-  if (!inherits(cnt, "try-error")) {
-    cnt <- sapply(strsplit(strsplit(cnt, "<Key>")[[1]], "</Key>"), "[[", 1)
-
-    id <- sapply(cnt, function(i) {
-      length(grep("^AVHRR/GIMMS/3G.*VI3g$", i)) == 1
-    })
-    cnt <- cnt[id]
+  if (inherits(cnt, "try-error")) {
+    return(cnt)
   }
+  
+  cnt <- sapply(strsplit(strsplit(cnt, "<Key>")[[1]], "</Key>"), "[[", 1)
+  
+  id <- sapply(cnt, function(i) {
+    length(grep("^AVHRR/GIMMS/3G.*VI3g$", i)) == 1
+  })
+  
+  return(file.path(con, cnt[id]))
+}
 
-  return(file.path(con, cnt))
+
+### update from poles -----
+
+updatePoles = function(...) {
+  
+  h = curl::new_handle(
+    ftp_use_epsv = TRUE
+    , dirlistonly = TRUE
+  )
+  con = curl::curl(
+    serverPath("poles")
+    , handle = h
+  )
+  on.exit(
+    close(con)
+  )
+  
+  cnt = try(readLines(con), silent = TRUE)
+  if (inherits(cnt, "try-error")) {
+    return(cnt)
+  }
+  
+  file.path(
+    serverPath("poles")
+    , grep(
+      "ndvi3g_geo_v1.*.nc4$"
+      , cnt
+      , value = TRUE
+    )
+  )
 }
 
 
@@ -148,11 +208,17 @@ readInventory <- function(server = c("ecocast", "nasanex"), version = 1L) {
 
 ### server paths -----
 
-serverPath <- function(server = c("ecocast", "nasanex"), version = 1L) {
-  if (server[1] == "ecocast") {
-    paste0("https://ecocast.arc.nasa.gov/data/pub/gimms/3g.",
-           ifelse(as.integer(version) == 1, "v1", "v0"))
-  } else {
-    "https://nasanex.s3.amazonaws.com"
-  }
+serverPath = function(
+  server = c("ecocast", "nasanex", "poles")
+  , version = 1L
+) {
+  switch(
+    match.arg(server)
+    , "ecocast" = sprintf(
+      "https://ecocast.arc.nasa.gov/data/pub/gimms/3g.%s"
+      , ifelse(as.integer(version) == 1, "v1", "v0")
+    )
+    , "nasanex" = "https://nasanex.s3.amazonaws.com"
+    , "poles"   = "ftp://download_403193:72855006@210.72.14.198"
+  )
 }
